# halfred

./: .gitignore  CMakeLists.txt  LICENSE.wiki  README.wiki  find_terms_config.json
app/: app.cpp  play_scrabble.cpp  test_solver.cpp
data/: letter_scores.txt  valid_words_small.txt  words_small.txt
include/: halfred.hpp  scrabble_sleuth.hpp  solver.hpp
